# greg

./: Cargo.toml  README.md  test.csv
src/: args.rs  main.rs  matrix.rs  mode.rs  state.rs
