[package]
name = "greg"
version = "0.1.0"
authors = ["Cameron Eldridge <cameldridge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
paw = "1.0.0"
structopt = { version = "0.3.14", features = ["paw"] }
