[package]
name = "greg"
version = "0.1.0"
authors = ["Cameron Eldridge <cameldridge@gmail.com>"]
edition = "2018"

[dependencies]
csv = "1.1.3"
ncurses = { version = "5.99.0", features = ["wide"] }
pancurses = { version = "0.16.1", features = ["wide"] }
# pancurses = "0.16.1"
paw = "1.0.0"
structopt = { version = "0.3.14", features = ["paw"] }
typenum = "1.12.0"
